# plan-applicative

./: .gitignore  .travis.yml  ChangeLog.md  README.md  cumae.cabal  plan-appliative.cabal  plan-applicative.cabal
lib/Control/: Cumae.hs  Plan.hs
lib/Control/Plan/: Core.hs
tests/: doctests.hs  tests.hs
