name:                cumae
version:             0.0.0.0
synopsis:            Writer-like Arrow/Applicative for progress tracking and static analysis.
description:         Writer-like Arrow/Applicative for progress tracking and static analysis.
license:             BSD3
license-file:        LICENSE
author:              Daniel Diaz
maintainer:          diaz.carrete@facebook.com
-- copyright:           
category:            Control
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

Extra-Source-Files:
    README.md

source-repository head
    type: git
    location: https://github.com/danidiaz/cumae.git

library
  exposed-modules:     Control.Cumae
  build-depends:
                       base 		 >=4.6 && <5,
                       containers  >= 0.5.7 && < 0.6
  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -Wall
